cisco certifications added

--- a/certificati/index.html
+++ b/certificati/index.html
@@ -557,14 +557,23 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
                 <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/static/2020/certificati/GoogleAnalytics.png" alt="Google analytics" style=" width:100%;" >
               </a>
-              <a class="cascade-content__item c-blocks__item c-blocks__item--double" href="http://www.mauriziominieri.it/static/2020/certificati/CCNA1.pdf" target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="CCNA1" >
+              <a class="cascade-content__item c-blocks__item c-blocks__item--double" href="http://www.mauriziominieri.it/static/2020/certificati/ITN20.pdf" target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="CCNA1" >
                 <div class="c-blocks__item-inner">
                     <span class="c-blocks__item-tag">Cisco</span>
                   <div class="c-blocks__item-body">
-                    <span class="c-blocks__item-title">CCNA1</span>
+                    <span class="c-blocks__item-title">CCNA Introduction to Networks</span>
                   </div>
                 </div>
-                <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/static/2020/certificati/CCNA1.png" alt="CCNA1" style=" width:100%;" >
+                <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/static/2020/certificati/ITN20.png" alt="CCNA1" style=" width:100%;" >
+              </a>
+              <a class="cascade-content__item c-blocks__item c-blocks__item--double" href="http://www.mauriziominieri.it/static/2020/certificati/RSE20.pdf" target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="CCNA2" >
+                <div class="c-blocks__item-inner">
+                    <span class="c-blocks__item-tag">Cisco</span>
+                  <div class="c-blocks__item-body">
+                    <span class="c-blocks__item-title">CCNA Routing and Switching</span>
+                  </div>
+                </div>
+                <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/static/2020/certificati/RSE20.png" alt="CCNA2" style=" width:100%;" >
               </a>
               <a class="cascade-content__item c-blocks__item c-blocks__item--double" href="http://www.mauriziominieri.it/static/2020/certificati/AnalisiStatistica-ValutazioneDelDatoSperimentale.pdf" target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="analisi statistica" >
                 <div class="c-blocks__item-inner">
