javascript and bash modified

--- a/lang/en_us/index.html
+++ b/lang/en_us/index.html
@@ -1066,16 +1066,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </a>
     </li>
     <li class="cards-grid__item">
-      <a class="cards-grid__item-wrapper"
-        href="https://it.wikipedia.org/wiki/JavaScript" target="_blank">
-        <div class="cards-grid__item-heading is-7">Java Script</div>
-        <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-java-script.png"/>
-      </a>
-    </li>
-    <li class="cards-grid__item">
     <a class="cards-grid__item-wrapper"
-      href="https://it.wikipedia.org/wiki/Script" target="_blank">
-      <div class="cards-grid__item-heading is-7">Script</div>
+      href="https://wiki.ubuntu-it.org/Programmazione/LinguaggioBash" target="_blank">
+      <div class="cards-grid__item-heading is-7">Bash</div>
         <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-script-language.png"/>
 
     </a>
@@ -1593,6 +1586,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             href="https://it.wikipedia.org/wiki/Bootstrap_(informatica)" target="_blank">
             <div class="cards-grid__item-heading is-7">Bootstrap</div>
           <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-bootstrap.png"/>
+          </a>
+        </li>
+        <li class="cards-grid__item">
+          <a class="cards-grid__item-wrapper"
+            href="https://it.wikipedia.org/wiki/JavaScript" target="_blank">
+            <div class="cards-grid__item-heading is-7">Java Script</div>
+            <img loading="lazy" src="http://www.mauriziominieri.it/static/2020/img/icons/icon-java-script.png"/>
           </a>
         </li>
         <li class="cards-grid__item">
