--- a/lang/en_us/index.html
+++ b/lang/en_us/index.html
@@ -1342,6 +1342,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </li>
   <li class="cards-grid__item">
     <a class="cards-grid__item-wrapper"
+      href="" target="_blank">
+      <div class="cards-grid__item-heading is-7">Wordpress</div>
+          <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-wordpress.png"/>
+    </a>
+  </li>
+  <li class="cards-grid__item">
+    <a class="cards-grid__item-wrapper"
       href="https://trac.cyberduck.io/" target="_blank">
       <div class="cards-grid__item-heading is-7">Cyberduck</div>
         <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-cyberduck.png"/>
