wikipedia wordpress added

--- a/lang/en_us/index.html
+++ b/lang/en_us/index.html
@@ -1342,7 +1342,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </li>
   <li class="cards-grid__item">
     <a class="cards-grid__item-wrapper"
-      href="" target="_blank">
+      href="https://it.wikipedia.org/wiki/WordPress" target="_blank">
       <div class="cards-grid__item-heading is-7">Wordpress</div>
           <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-wordpress.png"/>
     </a>
