--- a/lang/en_us/index.html
+++ b/lang/en_us/index.html
@@ -1723,6 +1723,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </li>
         <li class="cards-grid__item">
         <a class="cards-grid__item-wrapper"
+          href="https://it.wikipedia.org/wiki/PhpMyAdmin" target="_blank">
+          <div class="cards-grid__item-heading is-7">phpMyAdmin</div>
+        <img loading="lazy" src="http://www.mauriziominieri.it/static/2020/img/icons/icon-phpmyadmin.png"/>
+        </a>
+        </li>
+        <li class="cards-grid__item">
+        <a class="cards-grid__item-wrapper"
           href="https://en.wikipedia.org/wiki/HeidiSQL" target="_blank">
           <div class="cards-grid__item-heading is-7">Heidi SQL</div>
             <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-heidisql.png"/>
