aruba and plesk added

--- a/index.html
+++ b/index.html
@@ -1513,6 +1513,20 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </li>
   <li class="cards-grid__item">
     <a class="cards-grid__item-wrapper"
+      href="https://it.wikipedia.org/wiki/Aruba_(azienda)" target="_blank">
+      <div class="cards-grid__item-heading is-7">Aruba</div>
+        <img loading="lazy" src="/static/2020/img/icons/icon-aruba.png" />
+    </a>
+  </li>
+  <li class="cards-grid__item">
+    <a class="cards-grid__item-wrapper"
+      href="https://en.wikipedia.org/wiki/Plesk" target="_blank">
+      <div class="cards-grid__item-heading is-7">Plesk</div>
+        <img loading="lazy" src="/static/2020/img/icons/icon-plesk.png" />
+    </a>
+  </li>
+  <li class="cards-grid__item">
+    <a class="cards-grid__item-wrapper"
       href="http://www.flowgorithm.org/" target="_blank">
       <div class="cards-grid__item-heading is-7">Flowgorithm</div>
           <img loading="lazy" src="http://www.mauriziominieri.it/static/2020/img/icons/icon-flowgorithm.png"/>
