--- a/index.html
+++ b/index.html
@@ -1523,7 +1523,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       href="https://en.wikipedia.org/wiki/Plesk" target="_blank">
       <div class="cards-grid__item-heading is-7">Plesk</div>
         <img loading="lazy" src="/static/2020/img/icons/icon-plesk.png" />
-    </a> 
+    </a>
   </li>
   <li class="cards-grid__item">
     <a class="cards-grid__item-wrapper"
@@ -1908,7 +1908,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
     <h2 class="cta-grid__heading is-2">Database Management</h2>
     <div class="cta-grid__copy">
-    <p class="cta-grid__copy-item is-copy-m">Tutti i database managers web che ho utilizzato durante il mio percorso accademico e lavorativo.</p>
+    <p class="cta-grid__copy-item is-copy-m">Tutti i database management systems (*: interfaccia web per l'amministrazione DB) che ho utilizzato durante il mio percorso accademico e lavorativo.</p>
     </div>
 
     <div class="cta-grid__cards-wrapper" >
@@ -1937,14 +1937,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <li class="cards-grid__item">
         <a class="cards-grid__item-wrapper"
           href="https://it.wikipedia.org/wiki/PhpMyAdmin" target="_blank">
-          <div class="cards-grid__item-heading is-7">phpMyAdmin</div>
+          <div class="cards-grid__item-heading is-7">* phpMyAdmin</div>
         <img loading="lazy" src="http://www.mauriziominieri.it/static/2020/img/icons/icon-phpmyadmin.png"/>
         </a>
         </li>
         <li class="cards-grid__item">
         <a class="cards-grid__item-wrapper"
           href="https://en.wikipedia.org/wiki/HeidiSQL" target="_blank">
-          <div class="cards-grid__item-heading is-7">Heidi SQL</div>
+          <div class="cards-grid__item-heading is-7">* Heidi SQL</div>
             <img loading="lazy" src="http://www.mauriziominieri.it/static/2020/img/icons/icon-heidisql.png"/>
         </a>
         </li>
