--- a/lang/en_us/index.html
+++ b/lang/en_us/index.html
@@ -1709,7 +1709,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
     <h2 class="cta-grid__heading is-2">Database Management</h2>
     <div class="cta-grid__copy">
-    <p class="cta-grid__copy-item is-copy-m">All the database management I have used during my academic and working career.</p>
+    <p class="cta-grid__copy-item is-copy-m">All the database management systems (*: web interface for DB administration) I have used during my academic and working career.</p>
     </div>
 
     <div class="cta-grid__cards-wrapper" >
@@ -1738,14 +1738,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <li class="cards-grid__item">
         <a class="cards-grid__item-wrapper"
           href="https://it.wikipedia.org/wiki/PhpMyAdmin" target="_blank">
-          <div class="cards-grid__item-heading is-7">phpMyAdmin</div>
+          <div class="cards-grid__item-heading is-7">* phpMyAdmin</div>
         <img loading="lazy" src="http://www.mauriziominieri.it/static/2020/img/icons/icon-phpmyadmin.png"/>
         </a>
         </li>
         <li class="cards-grid__item">
         <a class="cards-grid__item-wrapper"
           href="https://en.wikipedia.org/wiki/HeidiSQL" target="_blank">
-          <div class="cards-grid__item-heading is-7">Heidi SQL</div>
+          <div class="cards-grid__item-heading is-7">* Heidi SQL</div>
             <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-heidisql.png"/>
         </a>
         </li>
