--- a/didattica/index.html
+++ b/didattica/index.html
@@ -294,7 +294,7 @@
     </style>
 
           <!--<link rel="preload" href="https://www.android.com/static/css/android-10/v2/main.min.css" as="style">-->
-          <!--<link rel="stylesheet" href="http://www.mauriziominieri.it/static/2020/css/didattica.main.min.css" media="print" onload="this.media='all'">-->
+          <link rel="stylesheet" href="http://www.mauriziominieri.it/static/2020/css/didattica.main.min.css" media="print" onload="this.media='all'">
           <!--<noscript><link rel="stylesheet" href="https://www.android.com/static/css/android-10/v2/main.min.css"></noscript>-->
 
         <style>
@@ -643,7 +643,7 @@
     </header>
 
     <div id="particles-js">
-        <p  id="particles-name">Maurizio Minieri1</p>
+        <p  id="particles-name">Maurizio Minieri</p>
         <p id="particles-role" class="cssanimation danceMiddle">Dottore in Informatica</p>
         <p  id="particles-university" class="cssanimation rollFromBottom">Università Federico II di Napoli</p>
     </div>
