--- a/didattica/index.html
+++ b/didattica/index.html
@@ -347,7 +347,91 @@
     }@media only screen and (min-width:600px){.background-shapes__15b23a7a3f21dfe832119d58568d679b{height:463px;transform:translate(-90px,80px);width:463px;
     }}@media only screen and (min-width:1024px){.background-shapes__15b23a7a3f21dfe832119d58568d679b{height:523px;transform:translate(-120px,50px);width:523px;
     }}
-        </style> 
+
+
+    /*IPHONE*/
+    @media only screen and (max-width: 599px) {
+    	#particles-name{
+    		position:absolute;
+    		font-size:40px;
+    		margin-top:100%;
+    		color:white;
+    	}
+    	#particles-role{
+    		position:absolute;
+    		font-size:26px;
+    		margin-top:111%;
+    		color:white;
+    	}
+    	#particles-university{
+    		position:absolute;
+    		font-size:20px;
+    		margin-top:120%;
+    		color:white;
+    	}
+    }
+    /*IPAD*/
+    @media only screen and (min-width: 600px) {
+    			#particles-name{
+    				position:absolute;
+    				font-size:70px;
+    				margin-top:47%;
+    				color:white;
+    		 }
+    		 #particles-role{
+    			 position:absolute;
+    			 font-size:45px;
+    			 margin-top:54%;
+    			 color:white;
+    		}
+    		#particles-university{
+    			position:absolute;
+    			margin-top:60%;
+    			color:white;
+    		}
+    }
+    /*DESKTOP*/
+    @media only screen and (min-width: 1000px) {
+    	#particles-name{
+    		position:absolute;
+    		font-size:70px;
+    		margin-top:37%;
+    		color:white;
+    	}
+    	#particles-role{
+    	 position:absolute;
+    	 font-size:45px;
+    	 margin-top:44%;
+    	 color:white;
+    	}
+    	#particles-university{
+    		position:absolute;
+    		margin-top:50%;
+    		font-size:35px;
+    		color:white;
+    	}
+    }
+
+      @media only screen and (min-width: 1440px) {
+    		#particles-name{
+    			position:absolute;
+    			font-size:70px;
+    			margin-top:23%;
+    			color:white;
+    		}
+    		#particles-role{
+    			position:absolute;
+    			font-size:45px;
+    			margin-top:27%;
+    			color:white;
+    		}
+    		#particles-university{
+    			position:absolute;
+    			margin-top:30.5%;
+    			color:white;
+    		}
+    	}
+        </style>
 
 
 
@@ -643,7 +727,7 @@
     </header>
 
     <div id="particles-js">
-        <p  id="particles-name">Maurizio Minieri</p>
+        <p  id="particles-name">Maurizio Minieri1</p>
         <p id="particles-role" class="cssanimation danceMiddle">Dottore in Informatica</p>
         <p  id="particles-university" class="cssanimation rollFromBottom">Università Federico II di Napoli</p>
     </div>
