--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-https:<!DOCTYPE html>
+<!DOCTYPE html>
 <html class="no-js" lang="it" dir="ltr" itemscope itemtype="https://schema.org/WebSite">
 
 <head>
