soapUI and postman added

--- a/index.html
+++ b/index.html
@@ -1609,6 +1609,20 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
          <img loading="lazy" src="http://www.mauriziominieri.it/static/2020/img/icons/icon-numbers.jpg" />
     </a>
   </li>
+  <li class="cards-grid__item">
+    <a class="cards-grid__item-wrapper"
+      href="https://www.postman.com/" target="_blank">
+      <div class="cards-grid__item-heading is-7">Postman</div>
+         <img loading="lazy" src="http://www.mauriziominieri.it/static/2020/img/icons/icon-postman.png" />
+    </a>
+  </li>
+  <li class="cards-grid__item">
+    <a class="cards-grid__item-wrapper"
+      href="https://www.soapui.org/" target="_blank">
+      <div class="cards-grid__item-heading is-7">SoapUI</div>
+         <img loading="lazy" src="http://www.mauriziominieri.it/static/2020/img/icons/icon-soap.jpg" />
+    </a>
+  </li>
 
   </ul>
   </div>
