--- a/index.html
+++ b/index.html
@@ -4056,16 +4056,16 @@ data-ca-label="tv">
                   </div>
                   <div class="apps-carousel__item apps-carousel__item--tv">
                     <div class="apps-carousel__item-inner">
-                      <a class="apps-carousel__item-img-wrap" href="https://github.com/mauriziominieri/Dashboard" target="_blank" tabindex="-1" data-g-event="apps-carousel" data-g-action="store-link-clicked" data-g-label="Dashboard">
-                        <img loading="lazy" alt="" class="apps-carousel__item-img" src="http://www.mauriziominieri.it/static/2020/gif/dashboardGierre.png" srcset="http://www.mauriziominieri.it/static/2020/gif/dashboardGierre.png" />
+                      <a class="apps-carousel__item-img-wrap" href="https://github.com/mauriziominieri/GiocoDelQuindici" target="_blank" tabindex="-1" data-g-event="apps-carousel" data-g-action="store-link-clicked" data-g-label="GiocoDelQuindici">
+                        <img loading="lazy" alt="" class="apps-carousel__item-img" src="http://www.mauriziominieri.it/static/2020/gif/giocoDel15.jpg" srcset="http://www.mauriziominieri.it/static/2020/gif/giocoDel15.jpg" />
                       </a>
                       <div class="apps-carousel__item-description">
-                        <a class="" href="https://github.com/mauriziominieri/Dashboard" target="_blank" data-g-event="apps-carousel" data-g-action="store-link-clicked" data-g-label="Dashboard">
+                        <a class="" href="https://github.com/mauriziominieri/GiocoDelQuindici" target="_blank" data-g-event="apps-carousel" data-g-action="store-link-clicked" data-g-label="GiocoDelQuindici">
                           <div class="apps-carousel__item-description-icon-link">
-                            <img loading="lazy" alt="BattleBash" role="presentation" class="apps-carousel__item-description-icon" src="http://www.mauriziominieri.it/static/2020/img/apps-carousel/icons/dashboard.png" srcset="http://www.mauriziominieri.it/static/2020/img/apps-carousel/icons/dashboard.png 2x">
+                            <img loading="lazy" alt="GiocoDelQuindici" role="presentation" class="apps-carousel__item-description-icon" src="http://www.mauriziominieri.it/static/2020/img/apps-carousel/icons/giocoDel15.png" srcset="http://www.mauriziominieri.it/static/2020/img/apps-carousel/icons/giocoDel15.png 2x">
                           </div>
                           <div class="cta-grid__copy-item apps-carousel__item-description-link">
-                              Dashboard Gierre
+                              Il gioco del 15
                           </div>
                         </a>
                       </div>
@@ -4083,6 +4083,23 @@ data-ca-label="tv">
                           </div>
                           <div class="cta-grid__copy-item apps-carousel__item-description-link">
                               Change Color
+                          </div>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="apps-carousel__item apps-carousel__item--tv">
+                    <div class="apps-carousel__item-inner">
+                      <a class="apps-carousel__item-img-wrap" href="https://github.com/mauriziominieri/Dashboard" target="_blank" tabindex="-1" data-g-event="apps-carousel" data-g-action="store-link-clicked" data-g-label="Dashboard">
+                        <img loading="lazy" alt="" class="apps-carousel__item-img" src="http://www.mauriziominieri.it/static/2020/gif/dashboardGierre.png" srcset="http://www.mauriziominieri.it/static/2020/gif/dashboardGierre.png" />
+                      </a>
+                      <div class="apps-carousel__item-description">
+                        <a class="" href="https://github.com/mauriziominieri/Dashboard" target="_blank" data-g-event="apps-carousel" data-g-action="store-link-clicked" data-g-label="Dashboard">
+                          <div class="apps-carousel__item-description-icon-link">
+                            <img loading="lazy" alt="BattleBash" role="presentation" class="apps-carousel__item-description-icon" src="http://www.mauriziominieri.it/static/2020/img/apps-carousel/icons/dashboard.png" srcset="http://www.mauriziominieri.it/static/2020/img/apps-carousel/icons/dashboard.png 2x">
+                          </div>
+                          <div class="cta-grid__copy-item apps-carousel__item-description-link">
+                              Dashboard Gierre
                           </div>
                         </a>
                       </div>
