--- a/index.html
+++ b/index.html
@@ -4057,7 +4057,7 @@ data-ca-label="tv">
                   <div class="apps-carousel__item apps-carousel__item--tv">
                     <div class="apps-carousel__item-inner">
                       <a class="apps-carousel__item-img-wrap" href="https://github.com/mauriziominieri/GiocoDelQuindici" target="_blank" tabindex="-1" data-g-event="apps-carousel" data-g-action="store-link-clicked" data-g-label="GiocoDelQuindici">
-                        <img loading="lazy" alt="" class="apps-carousel__item-img" src="http://www.mauriziominieri.it/static/2020/gif/giocoDel15.jpg" srcset="http://www.mauriziominieri.it/static/2020/gif/giocoDel15.jpg" />
+                        <img loading="lazy" alt="" class="apps-carousel__item-img" src="http://www.mauriziominieri.it/static/2020/gif/giocoDel15.png" srcset="http://www.mauriziominieri.it/static/2020/gif/giocoDel15.png" />
                       </a>
                       <div class="apps-carousel__item-description">
                         <a class="" href="https://github.com/mauriziominieri/GiocoDelQuindici" target="_blank" data-g-event="apps-carousel" data-g-action="store-link-clicked" data-g-label="GiocoDelQuindici">
