--- a/index.html
+++ b/index.html
@@ -1137,7 +1137,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <svg class="icon--svg cta__icon cta__external" aria-hidden="true">
                 <use xlink:href="#ico-arrow-large"></use>
               </svg></a> <br><br>
-                Dopo essermi laureato ho ricoperto vari ruoli, attualmente sono:
+                Dopo essermi laureato ho ricoperto vari ruoli, tra cui:
 
 
 </p>
@@ -1179,17 +1179,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <br>
                   <p class="cta-grid__copy-item text-normal cascade-text__item">
                 Nella sezione <a class="cta" href="http://www.mauriziominieri.it/didattica/">DIDATTICA</a> puoi consultare slides, verifiche e guide create da me e vedere
-                le foto con i miei studenti.
+                le foto con i miei studenti.<br>
+                Attualmente lavoro come Ingegnere software presso la <a class="cta" href="http://www.protom.com/">Protom</a> in un progetto <a class="cta" href="https://www.indracompany.com/">Indra.</a>
                 <br><br>
                 <p class="cta-grid__copy-item is-copy" style="text-align: center">"Beyond the common vision"</p>
-
-
-
 
               </p>
 
 
-              <a href=""
+              <!--<a href=""
               class="cta cta--is-2"
               aria-label="Try it now: Sound Amplifier"      target="_blank"
                 rel="noopener"
@@ -1197,7 +1195,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               >Scopri di più
               <svg class="icon--svg cta__icon cta__external" aria-hidden="true">
               <use xlink:href="#ico-arrow-large"></use>
-              </svg></a>
+            </svg></a>-->
 
 
 
