--- a/index.html
+++ b/index.html
@@ -1719,7 +1719,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <img loading="lazy" src="http://www.mauriziominieri.it/static/2020/img/icons/icon-vscode.png"/>
       </a>
     </li>
-
+    <li class="cards-grid__item">
+      <a class="cards-grid__item-wrapper"
+        href="https://dotnet.microsoft.com/apps/xamarin" target="_blank">
+        <div class="cards-grid__item-heading is-7">Xamarin</div>
+        <img loading="lazy" src="http://www.mauriziominieri.it/static/2020/img/icons/icon-xamarin.png"/>
+      </a>
+    </li>
   </ul>
   </div>
 
