OCA certificate added.

--- a/certificati/index.html
+++ b/certificati/index.html
@@ -513,6 +513,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           data-classes="is-in-viewport"
           data-add-on-enter>
           <div class="c-blocks">
+              <a class="cascade-content__item c-blocks__item c-blocks__item--double" href="https://www.credly.com/badges/bfeb2a50-eca8-4e1a-961d-76d80bce548d?source=linked_in_profile" target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="OCA" >
+                <div class="c-blocks__item-inner">
+                    <span class="c-blocks__item-tag">Oracle</span>
+                  <div class="c-blocks__item-body">
+                    <span class="c-blocks__item-title">Oracle Certified Associate, Java SE 8 Programmer</span>
+                  </div>
+                </div>
+              <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/static/2020/certificati/oca.png" alt="OCA" style=" width:100%;" >
+              </a>
               <a class="cascade-content__item c-blocks__item c-blocks__item--double" href="http://www.mauriziominieri.it/static/2020/certificati/CertificatoAppleTeacher.pdf" target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="Apple Teacher" >
                 <div class="c-blocks__item-inner">
                     <span class="c-blocks__item-tag">Apple</span>
