first bug fixed FOREVER.

--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       class="hero-devices"
       data-android-component="hero-devices"
       data-android-component-animation="q-hero">
-    <div class="hero-devices__wrapper grid2">
+    <div class="hero-devices__wrapper grid2" style="margin-top: 1px;">
       <div class="hero-devices__copy-wrapper">
           <h1 class="is-7">Università Federico II</h1>
           <div
