--- a/lang/en_us/index.html
+++ b/lang/en_us/index.html
@@ -526,7 +526,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       class="hero-devices"
       data-android-component="hero-devices"
       data-android-component-animation="q-hero">
-    <div class="hero-devices__wrapper grid2">
+    <div class="hero-devices__wrapper grid2" style="margin-top: 1px;">
       <div class="hero-devices__copy-wrapper">
           <h1 class="is-7">Federico II University</h1>
           <div
