visual basic programming language added

--- a/lang/en_us/index.html
+++ b/lang/en_us/index.html
@@ -1096,6 +1096,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-python.png"/>
       </a>
     </li>
+    <li class="cards-grid__item">
+      <a class="cards-grid__item-wrapper"
+        href="https://it.wikipedia.org/wiki/Visual_Basic" target="_blank">
+        <div class="cards-grid__item-heading is-7">Visual Basic</div>
+          <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-visual-basic.png"/>
+      </a>
+    </li>
   </ul>
   </div>
 
