--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html class="no-js" lang="it" dir="ltr" itemscope itemtype="https://schema.org/WebSite">
-
 <head>
     <meta charset="utf-8">
 
@@ -9,35 +8,31 @@
     href = "http://www.mauriziominieri.it/static/2020/img/icons/logoM.png"
     type = "image/x-icon">
 
-<!--INIZIO Personal-->
-  <!--Effetto scrolling-->
-  <style>
-  html {scroll-behavior: smooth;}
-  </style>
+    <!--INIZIO Personal-->
+    <!--Effetto scrolling-->
+    <style>
+    html {scroll-behavior: smooth;}
+    </style>
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-138508206-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
 
+        gtag('config', 'UA-138508206-1');
+    </script>
 
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-138508206-1"></script>
-  <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-138508206-1');
-  </script>
-
-
-
-<!--INIZIO CSS-->
-<link href="http://www.mauriziominieri.it/static/2020/css/main.min.css" rel="stylesheet">
-<link rel="preload" href="http://www.mauriziominieri.it/static/2020/css/main2.min.css" as="style">
-<link rel="stylesheet" href="http://www.mauriziominieri.it/static/2020/css/main2.min.css" media="print" onload="this.media='all'">
-<link rel="stylesheet" href="http://www.mauriziominieri.it/static/2020/css/carousel.css">
-<link href="http://www.mauriziominieri.it/static/2020/css/photoFlip.css" rel="stylesheet">
-<!--<link href="file:///Users/mauriziominieri/websites/mauriziominieri.github.io/static/2020/css/photoFlip.css" rel="stylesheet">-->
-<!--<link href="http://www.mauriziominieri.it/static/2020/css/fonts.css" rel="stylesheet">-->
-<!--FINE CSS-->
+    <!--INIZIO CSS-->
+    <link href="http://www.mauriziominieri.it/static/2020/css/main.min.css" rel="stylesheet">
+    <link rel="preload" href="http://www.mauriziominieri.it/static/2020/css/main2.min.css" as="style">
+    <link rel="stylesheet" href="http://www.mauriziominieri.it/static/2020/css/main2.min.css" media="print" onload="this.media='all'">
+    <link rel="stylesheet" href="http://www.mauriziominieri.it/static/2020/css/carousel.css">
+    <link href="http://www.mauriziominieri.it/static/2020/css/photoFlip.css" rel="stylesheet">
+    <!--<link href="file:///Users/mauriziominieri/websites/mauriziominieri.github.io/static/2020/css/photoFlip.css" rel="stylesheet">-->
+    <!--<link href="http://www.mauriziominieri.it/static/2020/css/fonts.css" rel="stylesheet">-->
+    <!--FINE CSS-->
 
 <style data-c-focus-control></style>
 
@@ -1298,6 +1293,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="cards-grid__item-heading is-7">Visual Basic</div>
           <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-visual-basic.png"/>
       </a>
+    </li>
+    <li class="cards-grid__item">
+        <a class="cards-grid__item-wrapper"
+           href="https://it.wikipedia.org/wiki/Kotlin_(linguaggio_di_programmazione)" target="_blank">
+            <div class="cards-grid__item-heading is-7">Kotlin</div>
+            <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-kotlin.png"/>
+        </a>
     </li>
   </ul>
   </div>
