--- a/lang/en_us/index.html
+++ b/lang/en_us/index.html
@@ -1103,6 +1103,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-visual-basic.png"/>
       </a>
     </li>
+    <li class="cards-grid__item">
+        <a class="cards-grid__item-wrapper"
+           href="https://it.wikipedia.org/wiki/Kotlin_(linguaggio_di_programmazione)" target="_blank">
+            <div class="cards-grid__item-heading is-7">Kotlin</div>
+            <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-kotlin.png"/>
+        </a>
+    </li>
   </ul>
   </div>
 
