kotlin https implemented

--- a/index.html
+++ b/index.html
@@ -1298,7 +1298,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <a class="cards-grid__item-wrapper"
            href="https://it.wikipedia.org/wiki/Kotlin_(linguaggio_di_programmazione)" target="_blank">
             <div class="cards-grid__item-heading is-7">Kotlin</div>
-            <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-kotlin.png"/>
+            <img src="/static/2020/img/icons/icon-kotlin.png"/>
         </a>
     </li>
   </ul>
