--- a/index.html
+++ b/index.html
@@ -1175,7 +1175,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                   <p class="cta-grid__copy-item text-normal cascade-text__item">
                 Nella sezione <a class="cta" href="http://www.mauriziominieri.it/didattica/">DIDATTICA</a> puoi consultare slides, verifiche e guide create da me e vedere
                 le foto con i miei studenti.<br>
-                Attualmente lavoro come Ingegnere software presso la <a class="cta cta--is-2" href="http://www.protom.com/">Protom</a> in un progetto <a class="cta cta--is-2" href="https://www.indracompany.com/">Indra.</a>
+                Ho lavorato come Full-Stack Developer presso <a class="cta cta--is-2" href="http://www.protom.com/">Protom</a> e attualmente lavoro come Ingegnere software presso <a class="cta cta--is-2" href="https://www.indracompany.com/">Indra.</a>
                 <br><br>
                 <p class="cta-grid__copy-item is-copy" style="text-align: center">"Beyond the common vision"</p>
 
