--- a/lang/en_us/index.html
+++ b/lang/en_us/index.html
@@ -993,7 +993,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <br>
                   <p class="cta-grid__copy-item text-normal cascade-text__item">
                 In the section <a class="cta" href="http://www.mauriziominieri.it/didattica/">TEACHING</a> you can consult slides, checks and guides created by me and see
-                the pictures with my students. I worked as a Full-Stack Developer presso <a class="cta cta--is-2" href="http://www.protom.com/">Protom</a> and currently work as Software Engineer at <a class="cta cta--is-2" href="https://www.indracompany.com/">Indra.</a>
+                the pictures with my students. <br>
+                I worked as a Full-Stack Developer at <a class="cta cta--is-2" href="http://www.protom.com/">Protom</a> and currently work as Software Engineer at <a class="cta cta--is-2" href="https://www.indracompany.com/">Indra.</a>
                 <br><br>
                 <p class="cta-grid__copy-item is-copy" style="text-align: center">"Beyond the common vision"</p>
 
