--- a/index.html
+++ b/index.html
@@ -182,11 +182,11 @@
     <link href="http://www.mauriziominieri.it/static/img/touch-icon-ipad.png" rel="apple-touch-icon" sizes="76x76">
     <link href="http://www.mauriziominieri.it/static/img/touch-icon-iphone-retina.png" rel="apple-touch-icon" sizes="120x120">
     <link href="http://www.mauriziominieri.it/static/img/touch-icon-ipad-retina.png" rel="apple-touch-icon" sizes="152x152">-->
-    <link href="file:///Users/mauriziominieri/websites/www.maurizio.com/static/img/favicon.ico" rel="shortcut icon">
-    <link href="file:///Users/mauriziominieri/websites/www.maurizio.com/static/img/touch-icon-iphone.png" rel="apple-touch-icon">
-    <link href="file:///Users/mauriziominieri/websites/www.maurizio.com/static/img/touch-icon-ipad.png" rel="apple-touch-icon" sizes="76x76">
-    <link href="file:///Users/mauriziominieri/websites/www.maurizio.com/static/img/touch-icon-iphone-retina.png" rel="apple-touch-icon" sizes="120x120">
-    <link href="file:///Users/mauriziominieri/websites/www.maurizio.com/static/img/touch-icon-ipad-retina.png" rel="apple-touch-icon" sizes="152x152">
+    <link href="http://www.mauriziominieri.it/static/2020/img/icons/logoM.png" rel="shortcut icon">
+    <link href="http://www.mauriziominieri.it/static/2020/img/icons/logoM.png" rel="apple-touch-icon">
+    <link href="http://www.mauriziominieri.it/static/2020/img/icons/logoM.png" rel="apple-touch-icon" sizes="76x76">
+    <link href="http://www.mauriziominieri.it/static/2020/img/icons/logoM.png" rel="apple-touch-icon" sizes="120x120">
+    <link href="http://www.mauriziominieri.it/static/2020/img/icons/logoM.png" rel="apple-touch-icon" sizes="152x152">
 
 <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
