paths bug fixed

--- a/didattica/index.html
+++ b/didattica/index.html
@@ -86,8 +86,8 @@
     <link rel="dns-prefetch" href="http://apis.google.com/">
 
     <link href="http://fonts.googleapis.com/css?family=Roboto:700,500,400,300,100&amp;subset=latin,latin-ext,cyrillic,cyrillic-ext" rel="stylesheet">
-    <link href="/didattica2/css/main.min.css" rel="stylesheet">
-    <link href="/didattica2/css/main2.min.css" rel="stylesheet">
+    <link href="/didattica/css/main.min.css" rel="stylesheet">
+    <link href="/didattica/css/main2.min.css" rel="stylesheet">
     <link href="http://www.mauriziominieri.it/static/2020/img/icons/logoM.png" rel="shortcut icon">
     <link href="http://www.mauriziominieri.it/static/2020/img/icons/logoM.png" rel="apple-touch-icon">
     <link href="http://www.mauriziominieri.it/static/2020/img/icons/logoM.png" rel="apple-touch-icon" sizes="76x76">
@@ -495,7 +495,7 @@ data-ca-label="it_it:ko_kr">한국어</option>-->
 
       <!-- background img -> bg-day.jpg -->
 <section id="esperienze" class="l-section atv-playing"
-  data-scene-conf="{&#34;apps_tiles&#34;: &#34;tv/tv/apps.png&#34;, &#34;content_wallpapers&#34;: &#34;/content-wallpapers.jpg&#34;, &#34;base_img_path&#34;: &#34;/didattica2&#34;, &#34;video_path&#34;: &#34;/static/2016/videos/tv/{id}-video.mp4&#34;, &#34;tv_frame&#34;: &#34;/tv-frame.jpg&#34;, &#34;flare_3&#34;: &#34;/flare3.png&#34;, &#34;flare_1&#34;: &#34;/flare1.png&#34;, &#34;voice_search&#34;: &#34;/assistant.png&#34;, &#34;tile_path&#34;: &#34;/img/tv/content-showcase/{id}-{index}.png&#34;, &#34;tile_shadow&#34;: &#34;/img/tv/content-showcase/tile-shadow.png&#34;, &#34;tv_overlay&#34;: &#34;tv/tv/tv-overlay.png&#34;, &#34;ui_static_bg_path&#34;: &#34;/background-up-next.jpg&#34;, &#34;clock&#34;: &#34;/clock.png&#34;, &#34;flare_2&#34;: &#34;/flare2.png&#34;, &#34;ui_static_path&#34;: &#34;/Plinio1.jpeg&#34;, &#34;row_spacing&#34;: 0.7}"
+  data-scene-conf="{&#34;apps_tiles&#34;: &#34;tv/tv/apps.png&#34;, &#34;content_wallpapers&#34;: &#34;/content-wallpapers.jpg&#34;, &#34;base_img_path&#34;: &#34;/didattica&#34;, &#34;video_path&#34;: &#34;/static/2016/videos/tv/{id}-video.mp4&#34;, &#34;tv_frame&#34;: &#34;/tv-frame.jpg&#34;, &#34;flare_3&#34;: &#34;/flare3.png&#34;, &#34;flare_1&#34;: &#34;/flare1.png&#34;, &#34;voice_search&#34;: &#34;/assistant.png&#34;, &#34;tile_path&#34;: &#34;/img/tv/content-showcase/{id}-{index}.png&#34;, &#34;tile_shadow&#34;: &#34;/img/tv/content-showcase/tile-shadow.png&#34;, &#34;tv_overlay&#34;: &#34;tv/tv/tv-overlay.png&#34;, &#34;ui_static_bg_path&#34;: &#34;/background-up-next.jpg&#34;, &#34;clock&#34;: &#34;/clock.png&#34;, &#34;flare_2&#34;: &#34;/flare2.png&#34;, &#34;ui_static_path&#34;: &#34;/Plinio1.jpeg&#34;, &#34;row_spacing&#34;: 0.7}"
   data-c-scroll-to-section
   data-c-tracking-section data-tracking-name="1|google-assistant"
   data-tracking-action="scroll-depth">
@@ -2210,15 +2210,15 @@ data-ca-label="it_it:ko_kr">한국어</option>-->
 <p id="aria-default-carousel__description" class="u-is-hidden">
   Esplora questa sequenza di elementi. Utilizza i pulsanti Indietro e Avanti o le frecce della tastiera per cambiare l'elemento visualizzato.
 </p>
-  <script src="/didattica2/js/common.min.js"></script>
-  <script src="/didattica2/js/main.min.js"></script>
-  <script src="/didattica2/js/hammer.min.js"></script>
-  <script src="/didattica2/js/TweenMax.min.js"></script>
-  <script src="/didattica2/js/three.min.js"></script>
-  <script src="/didattica2/js/ScrollMagic.min.js"></script>
-  <script src="/didattica2/js/animation.gsap.min.js"></script>
-  <script src="/didattica2/js/TimelineLite.min.js"></script>
-  <script src="/didattica2/js/atv.min.js"></script>
+  <script src="/didattica/js/common.min.js"></script>
+  <script src="/didattica/js/main.min.js"></script>
+  <script src="/didattica/js/hammer.min.js"></script>
+  <script src="/didattica/js/TweenMax.min.js"></script>
+  <script src="/didattica/js/three.min.js"></script>
+  <script src="/didattica/js/ScrollMagic.min.js"></script>
+  <script src="/didattica/js/animation.gsap.min.js"></script>
+  <script src="/didattica/js/TimelineLite.min.js"></script>
+  <script src="/didattica/js/atv.min.js"></script>
   <script>
     android.pages.atv.init();
   </script>
